# constellation

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .golangci.yml  .grype.yaml  .ko.yaml  .lychee.toml  .lycheeignore  .shellcheckrc  .vale.ini  2.22.html  2.23.html  404.html  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.build  Dockerfile.e2e  Dockerfile.kms  LICENSE  MODULE.bazel  README.md  SECURITY.md  WORKSPACE.bazel  WORKSPACE.bzlmod  _redirects  cli.md  flake.nix  go.mod  go.sum  go.work  go.work.sum  gtagman.js  index.html  license.err  netlify.toml  (+12 more)
api/attestationconfig/: BUILD.bazel  attestationconfig.go  fetcher.go  fetcher_test.go  version.go  version_test.go
api/attestationconfigapi/: BUILD.bazel  attestationconfigapi.go  fetcher.go  version.go  version_test.go
bazel/ci/: BUILD.bazel  actionlint.sh.in  bazel_container.sh.in  buf.sh.in  cli_docgen.sh.in  def.bzl  go_bin_for_host.bzl  go_generate.sh.in  go_tidy.sh.in  gocoverage_diff.sh.in  golangci.sh.in  golangci_lint.sh.in  golicenses.sh.in  govulncheck.sh.in  keep_sorted.sh.in  license_header.sh.in  licenseheader.sh.in  proto_targets.bzl  proto_targets_check.sh.in  shellcheck.sh.in  shfmt.sh.in  terraform.sh.in  terraform_docgen.sh.in  tf.sh.in  tfsec.sh.in  tidy.sh  tidy.sh.in  unused_gh_action.sh.in  unused_gh_actions.sh.in  version_info_gen.sh.in
bazel/devbuild/: BUILD.bazel  def.bzl  prepare_developer_workspace.sh.in
bazel/envtest/: BUILD.bazel
bazel/mkosi/: BUILD.bazel  BUILD.tpl  mkosi_configure.bzl  mkosi_image.bzl  mkosi_wrapper.sh.in  toolchain.bzl
bazel/rbe/: BUILD.bazel
bazel/release/: BUILD.bazel
bazel/settings/: BUILD.bazel
bootstrapper/initproto/: BUILD.bazel  init.pb.go  init.proto  init_grpc.pb.go
cli/: BUILD.bazel  README.md  main.go
cli/azure/: autoscaling_node_group_test.go  instances.go  instances_test.go  instancetypes.go  loadbalancer.go  scaleset.go
cli/cloudprovider/: cloudprovider.go  cloudprovider_string.go  provider_string.go
cli/cmd/: BUILD.bazel  azureclient.go  azureclient_test.go  cloud.go  cloud_test.go  config.go  configgenerate.go  configgenerate_test.go  constants.go  create.go  create_aws.go  create_aws_test.go  create_azure.go  create_azure_test.go  create_gcp.go  create_gcp_test.go  create_test.go  ec2client.go  ec2client_test.go  gcpclient.go  gcpclient_test.go  init.go  init_test.go  protoclient.go  protoclient_test.go  readconfig.go  readconfig_test.go  recover.go  recover_test.go  recoveryclient.go  recoveryclient_test.go  root.go  serviceaccountcreator.go  serviceaccountcreator_test.go  statuswaiter.go  statuswaiter_test.go  terminate.go  terminate_test.go  userinteraction.go  userinteraction_test.go  (+15 more)
cli/ec2/: instances.go  instances_test.go  instancetypes.go  tags.go  tags_test.go
cli/file/: file.go  file_test.go
cli/gcp/: autoscaling_node_group_test.go  instances.go  instances_test.go
cli/proto/: client.go  client_test.go  recover.go  respclients.go  respclients_test.go
cli/qemu/: instances.go  instances_test.go
cli/status/: status.go  status_test.go
cli/vpn/: configurer.go  configurer_test.go  vpn.go  vpn_test.go
csi/cryptmapper/: BUILD.bazel  cryptmapper.go  cryptmapper_cgo.go  cryptmapper_cross.go  cryptmapper_test.go
csi/kms/: BUILD.bazel  constellation.go  constellation_test.go
csi/test/: BUILD.bazel  mount_integration_test.go
debugd/logstash/: BUILD.bazel  Dockerfile  assets.go
disk-mapper/cmd/: BUILD.bazel  main.go
disk-mapper/recoverproto/: BUILD.bazel  recover.pb.go  recover.proto  recover_grpc.pb.go
e2e/malicious-join/: BUILD.bazel  Dockerfile  job.yaml  job_template.sh.in  malicious-join.go  malicious-join_test.go  test.sh.in
e2e/miniconstellation/: .terraform.lock.hcl  BUILD.bazel  cloud-init.yaml  main.sh.in  main.tf  output.tf  test-remote.sh  variables.tf
e2e/provider-upgrade/: BUILD.bazel  upgrade_test.go
image/: .gitignore  0001-drop-.osrel-UKI-section.patch  0001-ukify-dont-bundle-osrel-section.patch  BUILD.bazel  Makefile  README.md  docker.env  mkosi.finalize  mkosi.postinst  mkosi.prepare  podman.env
image/apko/: alpine-base-user-65532.yaml  alpine-base.yaml  alpine-libcryptsetup.yaml  alpine-qemu-metadata-api.yaml
image/assembler/: README.md
image/base/: BUILD.bazel  mkosi.conf  mkosi.finalize  mkosi.postinst  mkosi.prepare
image/dm-verity/: recalculate-dm-verity.sh
image/docs/: README.md
image/initrd/: BUILD.bazel  mkosi.conf  mkosi.postinst
image/measured-boot/: measure_util.sh  pcr-stable.json  precalculate_pcr_12.sh  precalculate_pcr_4.sh  precalculate_pcr_8.sh  precalculate_pcr_9.sh
image/mirror/: BUILD.bazel  SHA256SUMS  dnf.conf  packages.txt  update_packages.sh
image/mkosi/: mkosi.finalize  mkosi.postinst
image/mkosi.conf.d/: aws.conf  containers.conf  mkosi.aws.conf  mkosi.azure.conf  mkosi.conf  mkosi.gcp.conf  mkosi.openstack.conf  mkosi.qemu.conf  secure-boot-tpm.conf  selinux.conf
image/mkosi.files/: mkosi.aws.conf  mkosi.azure.conf  mkosi.gcp.conf  mkosi.openstack.conf  mkosi.qemu.conf
image/mkosi.repart/: 00-esp.conf  10-root.conf
image/pki_prod/: KEK.auth  KEK.cer  KEK.crt  KEK.esl  PK.auth  PK.cer  PK.crt  PK.esl  db.auth  db.cer  db.crt  db.esl
image/pki_testing/: MicCorKEKCA2011_2011-06-24.esl  db.auth
image/runner/: cloud-init.txt  google-cloud-function.py
image/secure-boot/: generate_nvram_vars.sh  genkeys.sh  signed-shim.sh
image/system/: BUILD.bazel  mkosi.conf  mkosi.postinst  variants.bzl
image/upload/: BUILD.bazel  pack.sh  upload.go  upload_aws.sh  upload_azure.sh  upload_gcp.sh  upload_openstack.sh  upload_qemu.sh
rpm/: BUILD.bazel  repo.yaml  rpms.bzl
terraform/: BUILD.bazel  assets.go
terraform-provider/: BUILD.bazel  README.md  go.mod  go.sum  main.go
terraform-provider-constellation/: BUILD.bazel  README.md  config.tfrc  config.tfrc.tpl  go.mod  go.sum  main.go
terraform-provider-constellation/docs/: index.md
terraform-provider-constellation/tools/: tools.go
terraform-provider/docs/: index.md
terraform-provider/examples/: README.md
(+5989 files in other folders)
