load("@bazeldnf//:def.bzl", "bazeldnf")

exports_files([
    "WORKSPACE.bazel",
])

bazeldnf(name = "bazeldnf")

alias(
    name = "tidy",
    actual = "//bazel/ci:tidy",
)

alias(
    name = "check",
    actual = "//bazel/ci:check",
)

# gazelle:map_kind go_test go_test //bazel/go:go_test.bzl
# gazelle:prefix github.com/edgelesssys/constellation/v2
