load("@bazeldnf//:def.bzl", "bazeldnf")

exports_files([
    "WORKSPACE.bazel",
])

bazeldnf(name = "bazeldnf")

alias(
    name = "tidy",
    actual = "//bazel/ci:tidy",
)

alias(
    name = "check",
    actual = "//bazel/ci:check",
)

alias(
    name = "generate",
    actual = "//bazel/ci:generate",
)

alias(
    name = "devbuild",
    actual = "//bazel/devbuild:devbuild",
)

alias(
    name = "push",
    actual = "//bazel/release:push",
)

# These magic Gazelle commands need to be in the top-level BUILD file.
# gazelle:map_kind go_test go_test //bazel/go:go_test.bzl
# gazelle:prefix github.com/edgelesssys/constellation/v2
