module(
    name="constellation",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")

# bazel_dep(name = "rules_nixpkgs_core", version = "0.10.0")

bazel_dep(name = "aspect_bazel_lib", version = "2.0.1")

bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.43.0")

bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.34.0")

bazel_dep(name = "hermetic_cc_toolchain", version = "2.1.3")

bazel_dep(name = "rules_oci", version = "1.4.3")

git_override(
    module_name = "rules_oci",
    remote = "https://github.com/malt3/rules_oci",
    commit = "a31ee09c6abd609ce2b813673f7f1747800f3367",
)

bazel_dep(name = "rules_pkg", version = "0.9.1")

bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

git_override(
    module_name = "rules_proto",
    remote = "https://github.com/bazelbuild/rules_proto",
    commit = "cda0effe6b5af095a6886c67f90c760b83f08c48",
)

bazel_dep(name = "rules_python", version = "0.27.0")
