load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")

filegroup(
    name = "sysroot_tree",
    srcs = glob(["sysroot-tree/**"]),
)

pkg_files(
    name = "sysroot",
    srcs = [":sysroot_tree"],
    strip_prefix = strip_prefix.from_pkg() + "sysroot-tree",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "sysroot_tar",
    srcs = [":sysroot"],
    visibility = ["//visibility:public"],
)

copy_file(
    name = "cryptsetup_closure",
    src = "@cryptsetup_x86_64-linux//:closure.tar",
    out = "cryptsetup_closure.tar",
    allow_symlink = True,
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "nvidia_kernel_modules",
    srcs = [
        "@nvidia_drm_ko//file",
        "@nvidia_ko//file",
        "@nvidia_modeset_ko//file",
        "@nvidia_peermem_ko//file",
        "@nvidia_uvm_ko//file",
    ],
    package_dir = "lib/modules/6.2.0-100.constellation.fc38.x86_64/kernel/nvidia",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "nvidia_gsp_firmware",
    srcs = [
        "@gsp_ga10x//file",
        "@gsp_tu10x//file",
    ],
    package_dir = "usr/lib/firmware/nvidia/535.129.03",
    visibility = ["//visibility:public"],
)
