load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "strip_prefix")

pkg_files(
    name = "sysroot",
    srcs = glob(["sysroot-tree/**"]),
    attributes = pkg_attributes(mode = "0555"),
    strip_prefix = strip_prefix.from_pkg("sysroot-tree"),
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "sysroot_tar",
    srcs = [":sysroot"],
    visibility = ["//visibility:public"],
)

copy_file(
    name = "cryptsetup_closure",
    src = "@cryptsetup_x86_64-linux//:closure.tar",
    out = "cryptsetup_closure.tar",
    allow_symlink = True,
    visibility = ["//visibility:public"],
)
